tests/ui/transmute-ref-dst-not-a-reference.msrv.stderr
error[E0308]: mismatched types
  --> $DIR/transmute-ref-dst-not-a-reference.rs:16:36
   |
16 | const DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute-ref-dst-not-a-reference.rs:16:36
   |
16 | const DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute-ref-dst-not-a-reference.rs:16:36
   |
16 | const DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute-ref-dst-not-a-reference.rs:16:36
   |
16 | const DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
